--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
         </div>
 
     </div>
-
+<scrpt src="js/jquery-3.4.1.min.js"></scrpt>
+<script src="js/index.js"></script>
 </body>
 </html>
